--- a/public/plans.html
+++ b/public/plans.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fiber Plans | Community Fiber</title>
     
-    <!-- CSP: Added fontawesome cdn -->
+    <!-- CSP -->
     <meta http-equiv="Content-Security-Policy" 
           content="default-src 'self'; 
                    script-src 'self' 'unsafe-inline' https://www.gstatic.com https://maps.googleapis.com; 
