--- a/public/plans.html
+++ b/public/plans.html
@@ -29,18 +29,19 @@
 
     <!-- Navigation -->
     <nav class="navbar">
-        <a href="index.html" class="logo-container">
+          <a href="index.html" class="logo-container">
             <img src="assets/images/community-fiber-logo.png" alt="Community Fiber" class="logo-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
             <span class="logo-text" style="display:none;">Community Fiber</span>
         </a>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="plans.html" class="active">Plans</a></li>
+            <li><a href="business.html">Business</a></li>
+            <li><a href="builders.html">Builders</a></li>
             <li><a href="support.html">Support</a></li>
         </ul>
         <div class="mobile-menu-btn">☰</div>
     </nav>
-
     <!-- Main Content Wrapper -->
     <main class="plans-wrapper">
         
