updated comet that i plan on removing

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
         </a>
         <ul class="nav-links">
             <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="plans.html">Plans</a></li>
+            <li><a href="residential.html">Residential</a></li>
             <li><a href="business.html">Business</a></li>
             <li><a href="builders.html">Builders</a></li>
             <li><a href="support.html">Support</a></li>
@@ -89,7 +89,7 @@
             <h2 class="section-title">Explore Our Services</h2>
             <div class="hub-grid">
                 
-                <a href="plans.html" class="hub-card">
+                <a href="residential.html" class="hub-card">
                     <div class="hub-icon"><i class="fa-solid fa-gauge-high"></i></div>
                     <h3>Residential Plans</h3>
                     <p>Gigabit speeds for streaming, gaming, and working from home. See our simple pricing.</p>
@@ -121,38 +121,7 @@
         </div>
     </section>
 
-    <!-- Why Fiber Section -->
-    <section class="features">
-        <div class="container">
-            <h2 class="section-title fade-in-section">Why Choose Fiber?</h2>
-            <div class="features-grid">
-                <div class="feature-card fade-in-section">
-                    <h3>Gigabit Speeds</h3>
-                    <p>Symmetrical upload and download speeds for lag-free gaming and 4K streaming.</p>
-                </div>
-                <div class="feature-card fade-in-section" style="transition-delay: 100ms;">
-                    <h3>Reliable Uptime</h3>
-                    <p>Weather-resistant infrastructure keeps you connected when it matters most.</p>
-                </div>
-                <div class="feature-card fade-in-section" style="transition-delay: 200ms;">
-                    <h3>No Data Caps</h3>
-                    <p>Stream, work, and play as much as you want without hidden fees or limits.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Neighborhood Highlights -->
-    <section class="neighborhoods">
-        <div class="container">
-            <h2 class="section-title fade-in-section">Neighborhood Highlights</h2>
-            <p class="section-desc fade-in-section" style="text-align:center;">We are currently expanding in the Elkhart County area.</p>
-            <div id="neighborhood-list" class="neighborhood-grid">
-                <!-- Populated by Main.js -->
-            </div>
-        </div>
-    </section>
-
+  
     <footer>
         <p>&copy; 2025 Community Fiber. All rights reserved.</p>
     </footer>
