--- a/public/builders.html
+++ b/public/builders.html
@@ -35,7 +35,7 @@
         </a>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="plans.html">Plans</a></li>
+            <li><a href="residential.html">Residential</a></li>
             <li><a href="business.html">Business</a></li>
             <li><a href="builders.html" class="active">Builders</a></li>
             <li><a href="support.html">Support</a></li>
