--- a/public/business.html
+++ b/public/business.html
@@ -36,8 +36,8 @@
         </a>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="plans.html" class="active">Plans</a></li>
-            <li><a href="business.html">Business</a></li>
+            <li><a href="residential.html">Residential</a></li>
+            <li><a href="business.html" class="active">Business</a></li>
             <li><a href="builders.html">Builders</a></li>
             <li><a href="support.html">Support</a></li>
         </ul>
