--- a/public/support.html
+++ b/public/support.html
@@ -35,7 +35,7 @@
         </a>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="plans.html">Plans</a></li>
+            <li><a href="residential.html">Residential</a></li>
             <li><a href="support.html" class="active">Support</a></li>
         </ul>
         <div class="mobile-menu-btn">☰</div>
