--- a/public/support.html
+++ b/public/support.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Support | Community Fiber</title>
     
-    <!-- CSP -->
+    <!-- UPDATED CSP -->
     <meta http-equiv="Content-Security-Policy" 
           content="default-src 'self'; 
-                   script-src 'self' 'unsafe-inline' https://www.gstatic.com https://maps.googleapis.com; 
+                   script-src 'self' 'unsafe-inline' https://www.gstatic.com https://maps.googleapis.com https://apis.google.com https://www.googletagmanager.com; 
                    style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com; 
                    font-src https://fonts.gstatic.com https://cdnjs.cloudflare.com; 
-                   img-src 'self' data: https://maps.gstatic.com; 
-                   connect-src 'self' https://firestore.googleapis.com https://www.googleapis.com https://maps.googleapis.com;">
+                   img-src 'self' data: https://maps.gstatic.com https://lh3.googleusercontent.com; 
+                   frame-src https://accounts.google.com/ https://content-firebaseappcheck.googleapis.com;
+                   connect-src 'self' https://firestore.googleapis.com https://www.googleapis.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://firebaseinstallations.googleapis.com https://firebase.googleapis.com https://www.google-analytics.com;">
 
     <!-- Fonts & Icons -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,6 +37,9 @@
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="residential.html">Residential</a></li>
+            <li><a href="business.html">Business</a></li>
+            <li><a href="builders.html">Builders</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="support.html" class="active">Support</a></li>
         </ul>
         <div class="mobile-menu-btn">☰</div>
