issues with banner and logger and forms for support.html

--- a/public/business.html
+++ b/public/business.html
@@ -210,5 +210,7 @@
 
     <!-- Scripts -->
     <script type="module" src="assets/js/business.js"></script>
+        <script type="module" src="assets/js/traffic-logger.js"></script> <!-- ADDED TRAFFIC LOGGER -->
+
 </body>
 </html>
