--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,8 @@
         </div>
     </section>
 
-  
+
+
     <footer>
         <p>&copy; 2025 Community Fiber. All rights reserved.</p>
     </footer>
@@ -116,7 +117,9 @@
     <!-- Scripts -->
     <!-- Load Main JS first to define the callback function -->
     <script type="module" src="assets/js/main.js"></script>
-    
+    <script type="module" src="assets/js/announcement.js"></script> <!-- ADDED BANNER SCRIPT -->
+        <script type="module" src="assets/js/traffic-logger.js"></script> <!-- ADDED TRAFFIC LOGGER -->
+
     <!-- Load Maps API with loading=async and defer -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAkgQq1AziwIGCiviYuuxEwAEKunYLweeA&libraries=places&callback=initAutocomplete&loading=async" async defer></script>
 </body>
