--- a/public/residential.html
+++ b/public/residential.html
@@ -73,6 +73,16 @@
             </div>
         </section>
 
+        <!-- Testimonials Section -->
+        <section class="testimonials-section fade-in-section" style="padding: 60px 20px; background-color: #f8fafc;">
+            <div class="container">
+                <h2 class="section-title">What Our Neighbors Say</h2>
+                <div id="testimonials-grid" class="testimonials-grid">
+                    <!-- Populated by residential.js -->
+                </div>
+            </div>
+        </section>
+
         <!-- Neighborhood Highlights (Moved from Index) -->
         <section class="neighborhoods-section" style="padding-top: 4rem;">
             <div class="container">
@@ -94,5 +104,7 @@
 
     <!-- Scripts -->
     <script type="module" src="assets/js/residential.js"></script>
+    <script type="module" src="assets/js/announcement.js"></script>
+    <script type="module" src="assets/js/traffic-logger.js"></script> <!-- ADDED TRAFFIC LOGGER -->
 </body>
 </html>
