--- a/public/support.html
+++ b/public/support.html
@@ -176,5 +176,7 @@
 
     <!-- Scripts -->
     <script type="module" src="assets/js/support.js"></script>
+        <script type="module" src="assets/js/traffic-logger.js"></script> <!-- ADDED TRAFFIC LOGGER -->
+
 </body>
 </html>
