--- a/public/about.html
+++ b/public/about.html
@@ -128,5 +128,7 @@
 
     <!-- Scripts -->
     <script type="module" src="assets/js/main.js"></script>
+        <script type="module" src="assets/js/traffic-logger.js"></script> <!-- ADDED TRAFFIC LOGGER -->
+
 </body>
 </html>
