--- a/public/admin.html
+++ b/public/admin.html
@@ -62,6 +62,12 @@
                 <button class="nav-item" data-tab="neighborhoods">
                     <i class="fa-solid fa-map-location-dot"></i> Neighborhoods
                 </button>
+                <button class="nav-item" data-tab="announcements">
+                    <i class="fa-solid fa-bullhorn"></i> Announcements
+                </button>
+                <button class="nav-item" data-tab="testimonials">
+                    <i class="fa-solid fa-comment-dots"></i> Testimonials
+                </button>
             </nav>
             <div class="sidebar-footer">
                 <div class="user-info">
@@ -155,6 +161,49 @@
                 </div>
             </section>
 
+            <!-- Announcements View -->
+            <section id="view-announcements" class="view-section">
+                <div class="page-header">
+                    <h1>Announcement Banner</h1>
+                </div>
+                <div class="admin-card" style="max-width: 600px;">
+                    <form id="announcement-form">
+                        <div style="margin-bottom: 20px;">
+                            <label class="form-label">Banner Active</label>
+                            <div style="display: flex; align-items: center; gap: 10px;">
+                                <input type="checkbox" id="banner-active" name="active" style="width: auto; transform: scale(1.5);">
+                                <span style="color: #64748b;">Show on all public pages</span>
+                            </div>
+                        </div>
+                        <div style="margin-bottom: 20px;">
+                            <label class="form-label">Message</label>
+                            <input type="text" id="banner-message" name="message" class="form-control" placeholder="e.g. Service Alert: Maintenance in Goshen tonight." required>
+                        </div>
+                        <div style="margin-bottom: 20px;">
+                            <label class="form-label">Type (Color)</label>
+                            <select id="banner-type" name="type" class="form-control">
+                                <option value="info">Info (Blue)</option>
+                                <option value="warning">Warning (Orange)</option>
+                                <option value="alert">Alert (Red)</option>
+                                <option value="success">Success (Green)</option>
+                            </select>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Save Banner Settings</button>
+                    </form>
+                </div>
+            </section>
+
+            <!-- Testimonials View -->
+            <section id="view-testimonials" class="view-section">
+                <div class="page-header">
+                    <h1>Testimonials</h1>
+                    <button id="add-testimonial-btn" class="btn btn-primary admin-only hidden"><i class="fa-solid fa-plus"></i> Add Testimonial</button>
+                </div>
+                <div id="testimonials-list" class="cards-grid">
+                    <!-- Populated via JS -->
+                </div>
+            </section>
+
         </main>
     </div>
 
@@ -165,7 +214,7 @@
             <h2 id="modal-title">Edit Item</h2>
             <form id="edit-form">
                 <input type="hidden" id="edit-id">
-                <input type="hidden" id="edit-type"> <!-- 'plan' or 'hood' -->
+                <input type="hidden" id="edit-type"> <!-- 'plan', 'hood', 'testimonial' -->
                 <div id="modal-fields"></div>
                 <div class="modal-actions">
                     <button type="button" class="btn btn-outline close-modal-btn">Cancel</button>
