--- a/public/builders.html
+++ b/public/builders.html
@@ -186,5 +186,7 @@
 
     <!-- Scripts -->
     <script type="module" src="assets/js/builders.js"></script>
+        <script type="module" src="assets/js/traffic-logger.js"></script> <!-- ADDED TRAFFIC LOGGER -->
+
 </body>
 </html>
