--- a/public/builders.html
+++ b/public/builders.html
@@ -40,6 +40,8 @@
             <li><a href="business.html">Business</a></li>
             <li><a href="builders.html" class="active">Builders</a></li>
             <li><a href="about.html">About</a></li>
+            <li><a href="science.html" style="color:var(--cfn-green); font-weight:700;">Learn About Fiber</a></li> <!-- ADDED -->
+
             <li><a href="support.html">Support</a></li>
         </ul>
         <div class="mobile-menu-btn">☰</div>
