--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
             <li><a href="business.html">Business</a></li>
             <li><a href="builders.html">Builders</a></li>
             <li><a href="about.html">About</a></li>
+            <li><a href="science.html" style="color:var(--cfn-green); font-weight:700;">Learn About Fiber</a></li> <!-- ADDED -->
             <li><a href="support.html">Support</a></li>
         </ul>
         <div class="mobile-menu-btn">☰</div>
@@ -108,7 +109,26 @@
         </div>
     </section>
 
-
+    <!-- Why Fiber Section -->
+    <section class="features">
+        <div class="container">
+            <h2 class="section-title fade-in-section">Why Choose Fiber?</h2>
+            <div class="features-grid">
+                <div class="feature-card fade-in-section">
+                    <h3>Gigabit Speeds</h3>
+                    <p>Symmetrical upload and download speeds for lag-free gaming and 4K streaming.</p>
+                </div>
+                <div class="feature-card fade-in-section" style="transition-delay: 100ms;">
+                    <h3>Reliable Uptime</h3>
+                    <p>Weather-resistant infrastructure keeps you connected when it matters most.</p>
+                </div>
+                <div class="feature-card fade-in-section" style="transition-delay: 200ms;">
+                    <h3>No Data Caps</h3>
+                    <p>Stream, work, and play as much as you want without hidden fees or limits.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <footer>
         <p>&copy; 2025 Community Fiber. All rights reserved.</p>
@@ -117,9 +137,9 @@
     <!-- Scripts -->
     <!-- Load Main JS first to define the callback function -->
     <script type="module" src="assets/js/main.js"></script>
-    <script type="module" src="assets/js/announcement.js"></script> <!-- ADDED BANNER SCRIPT -->
-        <script type="module" src="assets/js/traffic-logger.js"></script> <!-- ADDED TRAFFIC LOGGER -->
-
+    <script type="module" src="assets/js/announcement.js"></script>
+    <script type="module" src="assets/js/traffic-logger.js"></script> 
+    
     <!-- Load Maps API with loading=async and defer -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAkgQq1AziwIGCiviYuuxEwAEKunYLweeA&libraries=places&callback=initAutocomplete&loading=async" async defer></script>
 </body>
