--- a/public/support.html
+++ b/public/support.html
@@ -40,6 +40,7 @@
             <li><a href="business.html">Business</a></li>
             <li><a href="builders.html">Builders</a></li>
             <li><a href="about.html">About</a></li>
+            <li><a href="science.html" style="color:var(--cfn-green); font-weight:700;">Learn About Fiber</a></li> <!-- ADDED -->
             <li><a href="support.html" class="active">Support</a></li>
         </ul>
         <div class="mobile-menu-btn">☰</div>
