added science features and polisihed execution

--- a/public/builders.html
+++ b/public/builders.html
@@ -39,8 +39,9 @@
             <li><a href="residential.html">Residential</a></li>
             <li><a href="business.html">Business</a></li>
             <li><a href="builders.html" class="active">Builders</a></li>
+
             <li><a href="about.html">About</a></li>
-            <li><a href="science.html" style="color:var(--cfn-green); font-weight:700;">Learn About Fiber</a></li> <!-- ADDED -->
+            <li><a href="science.html" style="color:var(--cfn-green); font-weight:700;">Science Zone</a></li> <!-- ADDED -->
 
             <li><a href="support.html">Support</a></li>
         </ul>
