added footer policies

--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
         </div>
     </header>
 
-    <!-- New Residential Fiber Promo Section -->
+    <!-- Residential Fiber Promo Section -->
     <section class="res-promo-section fade-in-section">
         <div class="container">
             <div class="res-promo-content">
@@ -83,46 +83,52 @@
         </div>
     </section>
 
-    <!-- Explore / Quick Links Hub -->
-    <section class="hub-section fade-in-section">
+    <!-- Other Services Section -->
+    <section class="other-services-section fade-in-section">
         <div class="container">
-            <h2 class="section-title">Explore Our Services</h2>
-            <div class="hub-grid">
+            <h2 class="section-title-small">Other Services</h2>
+            <div class="services-grid">
                 
-                <a href="residential.html" class="hub-card">
-                    <div class="hub-icon"><i class="fa-solid fa-gauge-high"></i></div>
-                    <h3>Residential Plans</h3>
-                    <p>Gigabit speeds for streaming, gaming, and working from home. See our simple pricing.</p>
-                    <span class="hub-link-text">View Plans &rarr;</span>
+                <!-- Business -->
+                <a href="business.html" class="service-card">
+                    <div class="service-content">
+                        <h3>Business Internet</h3>
+                        <p>Enterprise-grade reliability and dedicated support to keep your business running smoothly.</p>
+                        <span class="service-link">Get a Quote <i class="fa-solid fa-arrow-right-long"></i></span>
+                    </div>
                 </a>
 
-                <a href="business.html" class="hub-card">
-                    <div class="hub-icon"><i class="fa-solid fa-briefcase"></i></div>
-                    <h3>Business Internet</h3>
-                    <p>Enterprise-grade reliability and dedicated support to keep your business running smoothly.</p>
-                    <span class="hub-link-text">Get a Quote &rarr;</span>
+                <!-- Builders -->
+                <a href="builders.html" class="service-card">
+                    <div class="service-content">
+                        <h3>Builders & Developers</h3>
+                        <p>Partner with us to install utility-grade fiber infrastructure in your new developments.</p>
+                        <span class="service-link">Partner Program <i class="fa-solid fa-arrow-right-long"></i></span>
+                    </div>
                 </a>
 
-                <a href="builders.html" class="hub-card">
-                    <div class="hub-icon"><i class="fa-solid fa-hard-hat"></i></div>
-                    <h3>Builders & Developers</h3>
-                    <p>Partner with us to install utility-grade fiber infrastructure in your new developments.</p>
-                    <span class="hub-link-text">Partner Program &rarr;</span>
-                </a>
-
-                <a href="support.html" class="hub-card">
-                    <div class="hub-icon"><i class="fa-solid fa-headset"></i></div>
-                    <h3>Support Center</h3>
-                    <p>Have a question or issue? Visit our help center to submit a ticket or find answers.</p>
-                    <span class="hub-link-text">Get Help &rarr;</span>
+                <!-- Support -->
+                <a href="support.html" class="service-card">
+                    <div class="service-content">
+                        <h3>Support Center</h3>
+                        <p>Have a question or issue? Visit our help center to submit a ticket or find answers.</p>
+                        <span class="service-link">Get Help <i class="fa-solid fa-arrow-right-long"></i></span>
+                    </div>
                 </a>
 
             </div>
         </div>
     </section>
 
-    <footer>
-        <p>&copy; 2025 Community Fiber. All rights reserved.</p>
+    <footer class="site-footer">
+        <div class="footer-content">
+            <div class="footer-links">
+                <a href="/footer/privacy-policy.html">Privacy Policy</a>
+                <a href="/footer/terms-of-service.html">Terms of Service</a>
+                <a href="/footer/acceptable-use-policy.html">Acceptable Use Policy</a>
+            </div>
+            <p>&copy; 2026 Community Fiber. All rights reserved.</p>
+        </div>
     </footer>
 
     <!-- Scripts -->
