added speed test feature (not working)

--- a/public/business.html
+++ b/public/business.html
@@ -41,6 +41,7 @@
             <li><a href="builders.html">Builders</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="support.html">Support</a></li>
+            <li><a href="speedtest.html">Speed Test</a></li>
         </ul>
         <div class="mobile-menu-btn">☰</div>
     </nav>
