--- a/public/support.html
+++ b/public/support.html
@@ -37,10 +37,11 @@
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="residential.html">Residential</a></li>
-            <li><a href="business.html">Business</a></li>
+            <li><a href="business.html" class="active">Business</a></li>
             <li><a href="builders.html">Builders</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="support.html" class="active">Support</a></li>
+            <li><a href="support.html">Support</a></li>
+            <li><a href="speedtest.html">Speed Test</a></li>
         </ul>
         <div class="mobile-menu-btn">☰</div>
     </nav>
