--- a/public/footer/privacy-policy.html
+++ b/public/footer/privacy-policy.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy | Community Fiber</title>
     
-    <!-- CSS -->
-    <link rel="stylesheet" href="assets/css/global.css">
-    <link rel="stylesheet" href="assets/css/components.css">
+    <!-- CSS (Corrected Paths) -->
+    <link rel="stylesheet" href="../assets/css/global.css">
+    <link rel="stylesheet" href="../assets/css/components.css">
     
     <style>
         .legal-content { max-width: 800px; margin: 0 auto; padding: 60px 20px; }
@@ -21,14 +21,16 @@
 <body>
 
     <nav class="navbar">
-        <a href="index.html" class="logo-container">
-            <img src="assets/images/community-fiber-logo.png" alt="Community Fiber" class="logo-img">
+        <a href="../index.html" class="logo-container">
+            <img src="../assets/images/community-fiber-logo.png" alt="Community Fiber" class="logo-img">
         </a>
         <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="residential.html">Residential</a></li>
-            <li><a href="business.html">Business</a></li>
-            <li><a href="support.html">Support</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../residential.html">Residential</a></li>
+            <li><a href="../business.html">Business</a></li>
+            <li><a href="../builders.html">Builders</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../support.html">Support</a></li>
         </ul>
     </nav>
 
@@ -71,9 +73,9 @@
     <footer class="site-footer">
         <div class="footer-content">
             <div class="footer-links">
-                <a href="privacy-policy.html">Privacy Policy</a>
+                <a href="privacy-policy.html" class="active">Privacy Policy</a>
                 <a href="terms-of-service.html">Terms of Service</a>
-                <a href="acceptable-use-policy.html">Acceptable Use Policy</a>
+                <a href="acceptable-user-policy.html">Acceptable Use Policy</a>
             </div>
             <p>&copy; 2026 Community Fiber. All rights reserved.</p>
         </div>
