--- a/public/footer/terms-of-service.html
+++ b/public/footer/terms-of-service.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms of Service | Community Fiber</title>
-    <link rel="stylesheet" href="assets/css/global.css">
-    <link rel="stylesheet" href="assets/css/components.css">
+    <!-- Corrected Paths -->
+    <link rel="stylesheet" href="../assets/css/global.css">
+    <link rel="stylesheet" href="../assets/css/components.css">
     <style>
         .legal-content { max-width: 800px; margin: 0 auto; padding: 60px 20px; }
         .legal-content h1 { font-family: var(--font-heading); font-size: 2.5rem; margin-bottom: 10px; color: var(--npt-black); }
@@ -17,14 +18,16 @@
 <body>
 
     <nav class="navbar">
-        <a href="index.html" class="logo-container">
-            <img src="assets/images/community-fiber-logo.png" alt="Community Fiber" class="logo-img">
+        <a href="../index.html" class="logo-container">
+            <img src="../assets/images/community-fiber-logo.png" alt="Community Fiber" class="logo-img">
         </a>
         <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="residential.html">Residential</a></li>
-            <li><a href="business.html">Business</a></li>
-            <li><a href="support.html">Support</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../residential.html">Residential</a></li>
+            <li><a href="../business.html">Business</a></li>
+            <li><a href="../builders.html">Builders</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../support.html">Support</a></li>
         </ul>
     </nav>
 
@@ -55,8 +58,8 @@
         <div class="footer-content">
             <div class="footer-links">
                 <a href="privacy-policy.html">Privacy Policy</a>
-                <a href="terms-of-service.html">Terms of Service</a>
-                <a href="acceptable-use-policy.html">Acceptable Use Policy</a>
+                <a href="terms-of-service.html" class="active">Terms of Service</a>
+                <a href="acceptable-user-policy.html">Acceptable Use Policy</a>
             </div>
             <p>&copy; 2026 Community Fiber. All rights reserved.</p>
         </div>
