--- a/public/index.html
+++ b/public/index.html
@@ -35,12 +35,13 @@
             <span class="logo-text" style="display:none;">Community Fiber</span>
         </a>
         <ul class="nav-links">
-            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="residential.html">Residential</a></li>
-            <li><a href="business.html">Business</a></li>
+            <li><a href="business.html" class="active">Business</a></li>
             <li><a href="builders.html">Builders</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="support.html">Support</a></li>
+            <li><a href="speedtest.html">Speed Test</a></li>
         </ul>
         <div class="mobile-menu-btn">☰</div>
     </nav>
